improve custom page elements improve input and textarea display

--- a/source/settings.json
+++ b/source/settings.json
@@ -66,7 +66,7 @@
         ["Fit", "fit"],
         ["Fill", "fill"]
       ],
-      "default": "fit",
+      "default": "fill",
       "description": "Sets the display of your product images"
     },
     {
