--- a/source/settings.json
+++ b/source/settings.json
@@ -64,7 +64,7 @@
     {
       "variable": "error_text_color",
       "label": "Error Text",
-      "default": "#AF5F55"
+      "default": "#841c0f"
     }
   ],
   "options": [
